# hello-wormhole-evm-solana

solana/: Anchor.toml  package-lock.json  package.json
solana/programs/hello-world/: Cargo.toml
solana/programs/hello-world/src/: lib.rs  message.rs
solana/programs/hello-world/src/common/: error.rs
solana/programs/hello-world/src/contexts/: initialize.rs  mod.rs  receive_message.rs  register_emitter.rs  send_message.rs
solana/programs/hello-world/src/states/: config.rs  foreign_emitter.rs  mod.rs  received.rs  wormhole_emitter.rs
solana/programs/solana/: Cargo.toml
solana/programs/solana/src/: lib.rs
solana/tests/: hello-world.ts
solana/tests/helpers/: constant.ts  index.ts  utils.ts
solana/tests/sdk/hello-world/: index.ts  program.ts
solana/tests/sdk/hello-world/accounts/: config.ts  foreignEmitter.ts  received.ts  wormhole.ts
solana/tests/sdk/hello-world/instructions/: index.ts  initialize.ts  receiveMessage.ts  registerEmitter.ts  sendMessage.ts
